--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,17 @@
 .content-div:hover{
   background-image: linear-gradient(
     to right,
-    rgba(112, 157, 255, 0.8),
-    hsla(242, 74%, 61%, 0.8)
+    rgba(70, 72, 79, 0.8),
+    hsla(0, 0%, 50%, 0.8)
   )!important;
 }
+
+#root{
+  background-color: #0F0E11;
+}
+
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
